fix uneven column heights on 3 column view

--- a/style/pagelayout.css
+++ b/style/pagelayout.css
@@ -215,6 +215,7 @@ a:active {
 @media screen and (min-width:[[setting:threecolmin]]) {
     #region-main-box {
     	left: [[setting:colwidth]];
+	float: left;
     }
 
     #region-post-box {
